--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -1449,7 +1449,7 @@ The value of the variables used in the right-hand part of an update in the \styl
 %------------------------------------------------------------
 
 \cref{table:summary:blocks-characteristics} summarizes what is allowed in the \styleIMI{seq} and \styleIMI{then} blocks.
-``Side effects'' refers to side effect functions, while ``variable auto remove'' denotes the fact that any variable used in the \styleIMI{seq} block is considered useful and will not be automatically removed (see option \styleOption{-no-var-autoremove} in \cref{chapter:options} for more explanations on \imitator{} automatic variable deletion).
+``Side effects'' refers to side-effect functions, while ``variable auto remove'' denotes the fact that any variable used in the \styleIMI{seq} block is considered useful and will not be automatically removed (see option \styleOption{-no-var-autoremove} in \cref{chapter:options} for more explanations on \imitator{} automatic variable deletion).
 
 
 %------------------------------------------------------------
@@ -1661,7 +1661,14 @@ We give below some examples of user function definitions:
 		a + pos
 	end
 
-	(* This function has side effects *)
+	(* Get last element of a list *)
+	fn last(l : rat list)
+	begin
+		let n : int = list_length(l) in
+		l[n - 1]
+	end
+
+	(* This function has side-effects *)
 	fn side_effect(i : int, j : int) : int
 	begin
 		(* Modify some global variables *)
@@ -1680,12 +1687,88 @@ We give below some examples of user function definitions:
 	\item Modification of a clock or a parameter is forbidden inside a function;
 	\item Modification of a function argument is forbidden;
 	\item Modification of a local variable value is forbidden;
-	\item As soon as a global variable is modified, the function is labeled internally as a ``side-effect function'', and can only be used in updates (not in guards neither in invariants);
-	\item Shadowing a global variable with a local one is possible (local variable with the same name as a global variable);
-	\item Shadowing a local variable with another local variable is possible (local variable with the same name as a previously declared local variable);
-	\item Calls of another functions are possible;
+	\item Updating a global variable by a clock or a parameter is forbidden;
 	\item Recursive calls are forbidden (including mutually recursive calls).
 \end{itemize}
+
+We give below some examples of incorrect user function definitions:
+
+\begin{IMITATORmodel}
+	var
+	my_global_i, my_global_j : int;
+	x, y : clock;
+	p1, p2 : parameter;
+
+	(* This function try to modify a clock, parameter and argument value *)
+	fn modify_clock_param_arg() : int
+	begin
+		(* Modification of a clock is forbidden, an error will be raised *)
+		x := 0;
+		(* Modification of a parameter is forbidden, an error will be raised *)
+		p1 := 0;
+		(* Modification of a function argument is forbidden, an error will be raised *)
+		i := 0;
+		0
+	end
+
+	(* Recursive calls are forbidden, an error will be raised *)
+	fn mutual_rec_f2() : int
+	begin
+		mutual_rec_f1()
+	end
+
+	fn mutual_rec_f1() : int
+	begin
+		let a : int = mutual_rec_f2() in
+		a + 1
+	end
+
+\end{IMITATORmodel}
+
+%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%
+\subsection{Some other practices}
+%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%
+
+\begin{itemize}
+\item As soon as a global variable is modified, the function is labeled internally as a ``side-effect function'', and can only be used in updates (not in guards neither in invariants);
+\item Shadowing an argument of the user function or shadowing a global / local variable with a local one is possible (local variable with the same name as another variable);
+\item Calls of another functions are possible;
+\end{itemize}
+
+We give below some examples of user function definitions:
+
+
+\begin{IMITATORmodel}
+
+	(* This function modify a global variable *)
+	fn side_effect_function() : int
+	begin
+		(* Modification of a global variable lead to label the function internally as a ``side-effect function'' *)
+		my_global_i := 0;
+		0
+	end
+
+	(* This function shadow a local, a global variable and an argument *)
+	fn shadow_variables(i : int) : int
+	begin
+		(* Local variable my_global_i shadow global variable of the same name *)
+		let my_global_i : int = 4 in
+		let a : int = 0 in
+		(* a shadow previous declaration and will now be equal to 5 *)
+		let a : int = 5 in
+		(* i shadow argument i *)
+		let i : rat = 3 in
+		(* Return 3 + 5 + 4 = 12 *)
+		i + a + my_global_i
+	end
+
+	(* This function call another function *)
+	fn call_other_function() : int
+	begin
+		shadow_variables(0) + shadow_variables(1)
+	end
+
+\end{IMITATORmodel}
 
 %-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%
 \subsection{Calling a user-defined function}
@@ -1697,9 +1780,9 @@ However, side-effect user-defined functions can only be used in sequential updat
 To illustrate the use of user-defined functions, note that the following guard in the model fragment below will evaluate to true:
 
 \begin{IMITATORmodel}
-	when two() = 2 goto lend;
 	when add_one(5) = 6 goto lend;
-	when add(1, 2) = 3 goto lend;
+	when add(1, 2) = two() + 1 goto lend;
+	when add(1, two()) = 3 goto lend;
 	when lerp(0, 5, 1 / 2) = 2.5 goto lend;
 \end{IMITATORmodel}
 
