Doc: validity of (P)TAs

--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -207,6 +207,22 @@
 }
 
 
+@article{AD94,
+	author    = {Alur, Rajeev and Dill, David L.},
+	title     = {A theory of timed automata},
+	doi       = {10.1016/0304-3975(94)90010-8},
+	journal   = {\TCS{}},
+	volume    = {126},
+	month     = apr,
+	number    = {2},
+	numpages  = {53},
+	year      = {1994},
+	pages     = {183--235},
+	publisher = {Elsevier Science Publishers Ltd.},
+	address   = {Essex, UK},
+}
+
+
 @inproceedings{AF10,
 	author =	{Andr{\'e}, {\'E}tienne and Fribourg, Laurent},
 	booktitle =	{Proceedings of the 4th Workshop on Reachability Problems in Computational Models ({RP} 2010)},
