--- a/doc/commons.tex
+++ b/doc/commons.tex
@@ -189,6 +189,9 @@
 % \newcommand{\avar}{t} % array variable
 % \newcommand{\AVarCard}{N} % cardinality of array variables
 
+% Operations
+\newcommand{\valuate}[2]{\ensuremath{#2(#1)}}
+
 % \newcommand{\DVarinit}{\DVar_\init} % discrete variable
 \newcommand{\edge}{e}
 \newcommand{\flow}{\ensuremath{\mathit{flow}}}
