--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -47,7 +47,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \imitator{} is a tool to perform automated parameter synthesis for concurrent timed systems~\cite{Andre21}.
-\imitator{} takes as input a network of \imitator{} parametric timed automata (\NIPTA{}): \NIPTA{} are an extension of parametric timed automata~\cite{AHV93}, a formalism to specify and verify models of systems where timing constants can be replaced with parameters, \ie{} unknown constants.
+\imitator{} takes as input a network of \imitator{} parametric timed automata (\NIPTA{}): \NIPTA{} are an extension of parametric timed automata~\cite{AHV93}, a formalism to specify and verify models of systems where timing constants in timed automata~\cite{AD94} can be replaced with parameters, \ie{} unknown constants.
 
 \imitator{} addresses several variants of the following problem:
 ``given a concurrent timed system, what are the values of the timing constants that guarantee that the model of the system satisfies some property?''
@@ -592,6 +592,33 @@ Note that an existing weaker notion of determinism allows multiple transitions f
 This is not the approach we choose in \imitator{}, where we impose at most one transition labeled with the same action.
 
 Once more, the notion of strong determinism in \imitator{} is \emph{not} used in any algorithm, but its nature is ``simply'' detected (and part of the result file).
+
+
+\paragraph{Validity}
+We define the \emph{validity} of a TA as the ability to satisfy its initial state; in other words, a TA is valid iff its state space is not empty.
+
+Given a parameter valuation~$\pval$, we denote by $\valuate{\A}{\pval}$ the non-parametric structure where all occurrences of a parameter~$\param_i$ have been replaced by~$\pval(\param_i)$.
+% If $\param$ is an integer valuation (\ie{} $\forall \param_i : \pval(\param_i) \in \setN$), and all flows of~$\A$ are~A, then $\valuate{\A}{\pval}$
+Note that, whenever
+	all rates are~1 ($\forall \loc \in \Loc, \forall \clock \in \Clock, \flow(\loc, \clock) = 1$),
+	all guards and invariants are of the form $\clock \bowtie d$, $d \in \setQplus$,
+	and
+	all variables are initially~0, % (\ie{} $\forall \clock \in \Clock : \VariablesInit(\clock) = \{ 0 \}$),
+then
+the resulting structure is a \emph{timed automaton}~\cite{AD94}.\footnote{%
+	Strictly speaking, a TA requires $d \in \setN$; however, using an appropriate rescaling of the constants (by multiplying all constants in $\valuate{\A}{\pval}$ by the least common multiple of their denominators), we obtain an equivalent (integer-valued) TA.
+}
+
+%------------------------------------------------------------
+\begin{definition}[validity]
+	Let $\A$ be an \NIPTA{}, let $\pval$ be a parameter valuation.
+
+	% TODO: redefine using a proper TTS!
+	$\valuate{\A}{\pval}$ is \emph{valid} iff its state space is not empty.
+\end{definition}
+%------------------------------------------------------------
+
+% TODO: example
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
