Manual: add ref to energy timed automata

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -501,6 +501,7 @@ This value is an arbitrary rational number, including 0 (in which case it is equ
 This can be specified using a syntax of the following form: \styleIMI{flow \{x' = 2\}}.
 A clock for which no flow is explicitly defined has of course flow~1.
 A stopwatch has flow~0.
+Note that the explicit flows can also encode (a parametric timed version of) \emph{energy timed automata}~\cite{BFLMS08}, where energy can be encoded by \imitator{} variables with an arbitrary (concrete) value, and updated using discrete updates.
 \end{description}
 
 
