--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -15,7 +15,7 @@
 	pages     = {TODO},
 	doi       = {TODO},
 
-	
+
 @inproceedings{AAPP21,
   	author		=	{Andr{\'e}, {\'E}tienne and Arias, Jaime and Petrucci, Laure and Van de Pol, Jaco},
   	title		=	{Iterative Bounded Synthesis for Efficient Cycle Detection in Parametric Timed Automata},
@@ -740,6 +740,30 @@ Mikołaj Bojańczyk, Sławomir Lasota and Igor Potapov
 	bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
+
+@inproceedings{BFLMS08,
+	author    = {Patricia Bouyer and
+				Ulrich Fahrenberg and
+				Larsen, Kim Guldstrand and
+				Nicolas Markey and
+				Srba, Ji\v{r}\'i},
+	editor    = {Franck Cassez and
+				Claude Jard},
+	title     = {Infinite Runs in Weighted Timed Automata with Energy Constraints},
+	booktitle = {{FORMATS}},
+	longbooktitle = {Proceedings of the 6th International Conference on Formal Modeling and Analysis of Timed Systems ({FORMATS} 2008)},
+	eventdate = {2008-09-15/2008-09-17},
+	location  = {Saint-Malo, France},
+	series    = {\LNCS{}},
+	volume    = {5215},
+	pages     = {33--47},
+	publisher = {Springer},
+	year      = {2008},
+	doi       = {10.1007/978-3-540-85778-5_4},
+	timestamp = {Tue, 14 May 2019 10:00:38 +0200},
+	biburl    = {https://dblp.org/rec/conf/formats/BouyerFLMS08.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+}
 
 @article{BHZ08,
 	Author = {Roberto Bagnara and
